Feat: Dto타입 리스트로 replies 필드 생성