@@ -13,6 +13,7 @@ import lombok.NoArgsConstructor;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Getter
@@ -27,6 +28,7 @@ public class PostResponseDto {
     private PostUserResponse user; // 작성자 정보
     private List<ImageResponseDto> images; // 관련 이미지 리스트
     private Long likeCount; // 좋아요 개수 추가
+    private List<PostResponseDto> replies; // 답글 추가
 
     public static PostResponseDto from(Post post) {
         return new PostResponseDto(
@@ -37,19 +39,30 @@ public class PostResponseDto {
                 post.getCreatedAt(),
                 convertUser(post.getUser()),
                 convertImagesToDtoList(post),
-                post.getLikesCount() // 좋아요 개수 추가
+                post.getLikesCount(), // 좋아요 개수 추가
+                convertRepliesToDtoList(post.getReplies())
         );
     }
 
+
+    private static List<PostResponseDto> convertRepliesToDtoList(List<Post> replies) {
+        return replies != null ? replies.stream()
+                .map(PostResponseDto::from) // 각 답글을 재귀적으로 변환
+                .collect(Collectors.toList()) : Collections.emptyList();
+    }
 
     private static PostUserResponse convertUser(User user) {
         return user != null ? PostUserResponse.from(user) : null;
     }
 
+    //이미지 널체킹 조건 추가
     private static List<ImageResponseDto> convertImagesToDtoList(Post post) {
+        if (post.getImages() == null) {
+            return Collections.emptyList(); // 이미지 리스트가 null인 경우 빈 리스트 반환
+        }
         return post.getImages().stream()
                 .map(ImageResponseDto::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
